--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,6 @@ black==23.1.0 ; python_full_version >= "3.7.2" and python_full_version < "4.0.0"
 pytest-cov==4.0.0 ; python_full_version >= "3.7.2" and python_full_version < "4.0.0"
 pytest==7.2.1 ; python_full_version >= "3.7.2" and python_full_version < "4.0.0"
 typing-extensions==4.5.0 ; python_full_version >= "3.7.2" and python_full_version < "4.0.0"
+myst_parser==0.18.1 ; python_full_version >= "3.7.2" and python_full_version < "4.0.0"
+Sphinx==5.3.0 ; python_full_version >= "3.7.2" and python_full_version < "4.0.0"
+sphinx-rtd-theme==1.1.1 ; python_full_version >= "3.7.2" and python_full_version < "4.0.0"
